--- a/chatbot-app/frontend/package.json
+++ b/chatbot-app/frontend/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "redux-observable": "^3.0.0-rc.2",
+    "rxjs": "^7.8.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
