--- a/chatbot-app/backend/requirements.txt
+++ b/chatbot-app/backend/requirements.txt
@@ -1,4 +1,6 @@
-Flask
-Flask-CORS
-requests
-python-dotenv
+Flask==2.3.3
+Flask-CORS==4.0.0
+requests==2.31.0
+python-dotenv==1.0.0
+openai==1.3.7
+pandas==2.0.3
