--- a/chatbot-app/backend/requirements.txt
+++ b/chatbot-app/backend/requirements.txt
@@ -3,4 +3,7 @@ Flask-CORS==4.0.0
 requests==2.31.0
 python-dotenv==1.0.0
 openai==1.3.7
-pandas==2.0.3
+pandas==2.2.3
+numpy>=1.24.0,<2.4.0
+werkzeug==2.3.7
+openpyxl==3.1.2
