--- a/chatbot-app/backend/requirements.txt
+++ b/chatbot-app/backend/requirements.txt
@@ -9,3 +9,10 @@ numpy>=1.24.0,<2.4.0
 werkzeug==2.3.7
 openpyxl==3.1.2
 chardet==5.2.0
+
+# Database connectors (optional - install as needed)
+mysql-connector-python>=8.0.32  # For MySQL
+psycopg2-binary>=2.9.5         # For PostgreSQL  
+cx_Oracle>=8.3.0               # For Oracle (requires Oracle client)
+# Note: pyodbc (already included) handles SQL Server and Azure SQL
+# Note: sqlite3 is included with Python standard library
