Added new database connect component and it's backend implementation.

--- a/chatbot-app/frontend/package.json
+++ b/chatbot-app/frontend/package.json
@@ -11,8 +11,8 @@
     "axios": "^1.6.2",
     "country-state-city": "^3.2.1",
     "leaflet": "^1.9.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+  "react": "18.3.1",
+  "react-dom": "18.3.1",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
